@@ -2,6 +2,9 @@ Changes
 lib/Algorithm/Evolutionary/Simple.pm
 script/simple-EA.pl
 script/maxones.pl
+script/onemax-benchmark.pl
+script/xover.pl
+script/bitflip.pl
 Makefile.PL
 MANIFEST			This list of files
 README.md
